--- a/index.html
+++ b/index.html
@@ -25,7 +25,16 @@
             <div class="col-1">col-1</div>
         </div>
 
-        
+        <div class="row">
+            <div class="col-2">col-2</div>
+            <div class="col-5">col-5</div>
+            <div class="col-5">col-5</div>
+        </div>
+
+        <div class="row">
+            <div class="col-12">col-12</div>
+        </div>
+
 
 
     </div>
