--- a/index.html
+++ b/index.html
@@ -35,7 +35,80 @@
             <div class="col-12">col-12</div>
         </div>
 
+        <div class="row">
+            <div class="col-8">col-8</div>
+            <div class="col-2">col-2</div>
+            <div class="col-2">col-2</div>
+        </div>
 
+        <div class="row">
+            <div class="col-1">col-1</div>
+            <div class="col-2">col-2</div>
+            <div class="col-2">col-2</div>
+            <div class="col-6">col-6</div>
+            <div class="col-1">col-1</div>
+        </div>
+
+        <div class="row">
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-2 nested"></div>
+                    <div class="col-2 nested"></div>
+                    <div class="col-8 nested"></div>
+                </div>
+            </div>
+
+            <div class="col-6">
+                <div class="row">
+                    <div class="col-6 nested"></div>
+                    <div class="col-6 nested"></div>
+                </div>
+            </div>
+        </div>
+
+        <h1>scaletta</h1>
+
+        <div class="row">
+            <div class="col-12"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-1"></div>
+            <div class="col-11"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-2"></div>
+            <div class="col-10"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-3"></div>
+            <div class="col-9"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-4"></div>
+            <div class="col-8"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-5"></div>
+            <div class="col-7"></div>
+        </div>
+
+        <div class="row">
+            <div class="col-6"></div>
+            <div class="col-6"></div>
+        </div>
+
+        <!--offset-->
+
+        <h1>OFFSET</h1>
+
+        <div class="row">
+            <div class="col-1 offset-11"></div>
+        </div>
 
     </div>
 </body>
