added padding into the nested row

--- a/index.html
+++ b/index.html
@@ -49,24 +49,28 @@
             <div class="col-1">col-1</div>
         </div>
 
-        <div class="row">
+        <div class="row padding">
             <div class="col-6">
-                <div class="row">
-                    <div class="col-2 nested"></div>
-                    <div class="col-2 nested"></div>
-                    <div class="col-8 nested"></div>
+                <div class="row padding content-center align-center">
+                    <div class="col-2 nested">nested 2 col</div>
+                    <div class="col-2 nested">nested 2 col</div>
+                    <div class="col-8 nested">nested 8 col</div>
                 </div>
             </div>
 
             <div class="col-6">
-                <div class="row">
-                    <div class="col-6 nested"></div>
-                    <div class="col-6 nested"></div>
+                <div class="row padding content-center align-center">
+                    <div class="col-6 nested">nested 6 col</div>
+                    <div class="col-6 nested">nested 6 col</div>
                 </div>
             </div>
         </div>
 
-        <h1>scaletta</h1>
+        <div class="row">
+            <div class="col-12 bg-light">
+                <h1>Scaletta</h1>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-12"></div>
@@ -103,8 +107,11 @@
         </div>
 
         <!--offset-->
-
-        <h1>OFFSET</h1>
+        <div class="row">
+            <div class="col-12 bg-light">
+                <h1>OFFSET</h1>
+            </div>
+        </div>
 
         <div class="row">
             <div class="col-1 offset-11"></div>
@@ -140,6 +147,14 @@
             <div class="col-11 offset-1"></div>
         </div>
         
+        <!--Nested-->
+        
+        <div class="row">
+            <div class="col-12 bg-light">
+                <h1>Nested</h1>
+            </div>
+        </div>
+
 
     </div>
 </body>
