added second nested

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="col-1">col-1</div>
         </div>
 
-        <div class="row padding">
+        <div class="row">
             <div class="col-6">
                 <div class="row padding content-center align-center">
                     <div class="col-2 nested">nested 2 col</div>
@@ -154,6 +154,29 @@
                 <h1>Nested</h1>
             </div>
         </div>
+
+        <div class="row">
+            <div class="col-7 padding d-flex">
+                <div class="col-2 nested"></div>
+                <div class="col-8 nested"></div>
+                <div class="col-2 nested"></div>
+            </div>
+            <div class="col-5 padding d-flex">
+                <div class="col-6 nested"></div>
+                <div class="col-6 nested"></div>
+            </div>
+        </div>
+
+            <!--alignment-->
+        <div class="row">
+            <div class="col-12 bg-light">
+                <h1>Alignment</h1>
+            </div>
+        </div>
+
+        
+
+        
 
 
     </div>
