--- a/index.html
+++ b/index.html
@@ -174,6 +174,17 @@
             </div>
         </div>
 
+        <div class="row content-start">
+            <div class="col-6">start</div>
+        </div>
+        <div class="row content-center">
+            <div class="col-6">center</div>
+        </div>
+        <div class="row content-end">
+            <div class="col-6">end</div>
+        </div>
+
+
         
 
         
