added alignment align

--- a/index.html
+++ b/index.html
@@ -185,7 +185,18 @@
         </div>
 
 
-        
+        <div class="row align-start">
+            <div class="col-6 big"></div>
+            <div class="col-6">top</div>
+        </div>
+        <div class="row align-center">
+            <div class="col-6 big"></div>
+            <div class="col-6">middle</div>
+        </div>
+        <div class="row align-end">
+            <div class="col-6 big"></div>
+            <div class="col-6">bottom</div>
+        </div>
 
         
 
