--- a/index.html
+++ b/index.html
@@ -198,8 +198,34 @@
             <div class="col-6">bottom</div>
         </div>
 
-        
+        <div class="row">
+            <div class="col-12 bg-light">
+                <h1>Justify content</h1>
+                <h3>Space around</h3>
+            </div>
+        </div>
 
+        <div class="row">
+            <div class="col-12 padding d-flex content-around">
+                <div class="col-2 nested"></div>
+                <div class="col-2 nested"></div>
+                <div class="col-2 nested"></div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 bg-light">
+                <h3>Space between</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-12 padding d-flex content-between">
+                <div class="col-2 nested"></div>
+                <div class="col-2 nested"></div>
+                <div class="col-2 nested"></div>
+            </div>
+        </div>
 
     </div>
 </body>
